[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miriutils"
version = "0.1.0"
authors = [
  { name="Benjamin Philip Collins", email="benjaminphilip.collins@studio.unibo.it" },
]
description = "Custom Python library for processing JWST/MIRI photometry"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "astropy",
    "photutils",
    "scipy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/benjaminpcollins/miriutils"
